...
import androidx.compose.ui.unit.dp
import com.android.wildex.R

object NamingScreenTestTags {
  const val NAMING_SCREEN = "naming_screen"
  const val WELCOME_TEXT = "welcome_text"
  const val NAME_FIELD = "name_field"
  const val SURNAME_FIELD = "surname_field"
  const val USERNAME_FIELD = "username_field"
  const val NEXT_BUTTON = "next_button"
}

@Composable
fun NamingScreen(
    data: OnBoardingData,
...
